# ChangeLog for dev-util/aruba
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/aruba/ChangeLog,v 1.50 2015/03/13 06:53:10 jer Exp $

  13 Mar 2015; Jeroen Roovers <jer@gentoo.org> aruba-0.5.4-r1.ebuild:
  Stable for HPPA (bug #542574).

  08 Mar 2015; Hans de Graaff <graaff@gentoo.org> -aruba-0.5.4.ebuild,
  -aruba-0.6.0.ebuild:
  Cleanup.

*aruba-0.6.2 (18 Jan 2015)

  18 Jan 2015; Manuel Rüger <mrueg@gentoo.org> +aruba-0.6.2.ebuild:
  Version bump.

  16 Nov 2014; Agostino Sarubbo <ago@gentoo.org> aruba-0.5.3.ebuild:
  Stable for ppc64, wrt bug #493780

  16 Nov 2014; Agostino Sarubbo <ago@gentoo.org> aruba-0.5.3.ebuild:
  Stable for ppc, wrt bug #493780

*aruba-0.6.1 (20 Aug 2014)

  20 Aug 2014; Hans de Graaff <graaff@gentoo.org> +aruba-0.6.1.ebuild:
  Version bump.

*aruba-0.6.0 (16 Aug 2014)

  16 Aug 2014; Hans de Graaff <graaff@gentoo.org> +aruba-0.6.0.ebuild:
  Version bump. Add ruby21.

  15 Aug 2014; Raúl Porcel <armin76@gentoo.org> aruba-0.5.3.ebuild:
  sparc stable, bug #493780

  15 Aug 2014; Raúl Porcel <armin76@gentoo.org> aruba-0.5.4-r1.ebuild:
  Add ~sparc wrt #471306

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> aruba-0.5.3.ebuild,
  aruba-0.5.4-r1.ebuild, aruba-0.5.4.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  22 Jul 2014; Tobias Klausmann <klausman@gentoo.org> aruba-0.5.4-r1.ebuild:
  Keyworded on alpha, bug #465948

  21 Jul 2014; Tobias Klausmann <klausman@gentoo.org> aruba-0.5.3.ebuild:
  Stable on alpha, bug #493780

  20 Jun 2014; Markus Meier <maekke@gentoo.org> aruba-0.5.4-r1.ebuild:
  add ~arm, bug #510876

  15 Jun 2014; Akinori Hattori <hattya@gentoo.org> aruba-0.5.4-r1.ebuild:
  keyword ~ia64 wrt bug #510876

*aruba-0.5.4-r1 (20 May 2014)

  20 May 2014; Hans de Graaff <graaff@gentoo.org> +aruba-0.5.4-r1.ebuild:
  Add ruby20. Drop arm, ia64 due to bug 510876. Drop alpha, sparc due to bug
  465948.
