@@ -7,15 +7,25 @@ DIST aruba-0.5.4.gem 69632 SHA256 6f1c2210195ac94cf48e06de574e6f3897ec5ff7a7ca71
 DIST aruba-0.6.1.gem 73728 SHA256 ce18e7bcea5fe16b5dcf39a0902a9779c7f1705715da779d05365bacf583c402 SHA512 af3fb80441bccc9e53ea4bee670a2b9e14f47036f45d0d7b3b2e656c08527eecb08da570d317ee36833a16010351dcd70ecd4753db28a3229aa0c7e03380ffcc WHIRLPOOL 35ee1d7387f62dca80b94744d62e661cd16805b92e2a4a127a7c322ac5916217dcb82ef4fef7797dc63327efb4989d5cb3e1629877a8ade1deeef59d673f2dfa
 DIST aruba-0.6.2.gem 75776 SHA256 7c518ca72da37dc966c6a2f589d9953ab7576a43332b7bac38949d06f5009842 SHA512 ad859aa34f6e6778d9eb92b7e8f298180250e0690b21285e48b85dda88c09c74437ed0dff4e07ea8a02e8c784841ef89504219aa844457273349b8072ebc761e WHIRLPOOL cf85f65672946776f4de3f6b0b060c99adfa376353c3f11a0e27d2a32f7e400c58d863c0e574b415a19c52386294dfff01a7591c133772f45211700ea19f83ac
 EBUILD aruba-0.5.3.ebuild 1102 SHA256 74c49f253753882df73f8060cb86894110f640ed14bd18f886058771ac00281b SHA512 423e266bc3d7478582a89d861a69d31d312cf7f82ed5ce5f489cc42fc6a2788a1f8c3ff55a83799892a81578d31717c8f5122053924b0a9be0ec2c74eb3201dd WHIRLPOOL af183bcbb5ea82bd9cd99a2d9f98fa34e1c29fb25f028f2e16bba2da37bbcd51d3372474b5c1886eeadddd2be072304825dd6c4acf5ab3f29662bbd2294256e3
-EBUILD aruba-0.5.4-r1.ebuild 1092 SHA256 79552febf49db997e1ed97b145bd81c658c066d92b09d47f3bd549f61626e61c SHA512 add5c9c855d12e89fa8c189efbe567a19ed498500cad0b2c128cee31ef1d1a132a3fa103cd11118edeca9dcf64a178ad81a4e6850920e6948e14fde615c381b2 WHIRLPOOL 20a0e9db0e706d2f38e9605b6ff566a9e8b25b8836aa512614ea8a0da7b558354b5c0388b472c630a1db213f1c664b010ee2f6e33eae4a7d8be1d2b84f6e0513
+EBUILD aruba-0.5.4-r1.ebuild 1091 SHA256 166e93376973217aff3333a79090444fca5cd0661ffd7bb88549582d9cf49567 SHA512 1d9bd0a33c8bb7d47978ce9176efdb75efa2969a3f64466e467ba01ff51f63c70a953132916fb5d58ed36dfd9488af1893a223a8bf8ea3f5b5597e5654974144 WHIRLPOOL b3d7b8c13d9ccf3f125f663e6f12f6cdfe93e6670641f1b08d0c6cd4314bebdcb189649bc83e3508d52d4e1042ca9c0d8d42d773d8133455ed4ec7106fbe2194
 EBUILD aruba-0.6.1.ebuild 1100 SHA256 c732b10431eccb034566d0fc42ad1da14bbbb88537442ab9e23d8f84a92f774e SHA512 caf152764fda48a74f5d294cedd17d8d7b7aeda257eeb30c6913f7ef508d29e4385667b3836a66e98e226ffb46e24554796707cc59aff5427abd857e4165022a WHIRLPOOL af4a220b8186eee934dd50ee14a06309b128b6e0af8f559252533ba2ed4e6d005ccee3546c6d4f3e5591c3c50f83036739b2799472ccd540ab2f280e4fe20cc3
 EBUILD aruba-0.6.2.ebuild 1099 SHA256 a3e9457fbc06b603134e06e5ad9dbcf5dc76420db28f029b259dadd7382d63ca SHA512 288eaee3e42ce7368e0ecedb5094101504e1373ff3b2f3b370ee2c2c4562da5ad7478f42033c6d21bebbce079cd6eedc944ec3b316825cb4d0255ed6c3ab912b WHIRLPOOL 60157894bfd80d8b079e6fca7e95421514ed8cd8855f051c3ee98a69156627adddb9d733331f9c4555af0c6bfe60f0b6f17ea81ccf45d9816164aa88d223ad52
-MISC ChangeLog 6141 SHA256 0af5a6323e089092d427523a74663d703cf466ff5a7a502256c205199ce95ef4 SHA512 873a51e1e1a772efaf70081cad56c1e6175196670ca3c8fb4ea2f4b8deaf8217eabed150849bb52d0242b2b08c0526bcc539127be9fadd2e386abbd350841b97 WHIRLPOOL fb102d14330244d67a96f4771c20268e3a5c3ec3320c71ebb5ab8ee7e8c4ea2a16d37d1cbde5920e57178824a6ebffca75718605b0d95701c880c8d643b75363
+MISC ChangeLog 6250 SHA256 63c249941f78a0720fbd676785253d7f826d56652dd0f69cc19d70785f701088 SHA512 3e4bcad0fa584097baa0887f729906201a05ca01767eb86e5b8a8c336e6a9953e8e0308db30c09566a486270a13027b6263cd5ca41fe64bb386b37f632a1279c WHIRLPOOL 8a09439a0e5fe400bea0de92261f13b5db6ac039850601549da5835e2dd224151e198ea3d9998af23d39cc677d55e4e6e47de8c70b545bafbecf33b3c0d6e31c
 MISC metadata.xml 201 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad SHA512 3131e5281b343002ef359d7199da425d3f9f5406ef4ddd9332eccad6b78e3ced62adedd4dfe14538db391d2590811df6f2a15cada5a1e924479a0189cd69b7d3 WHIRLPOOL 8631f9384237d55afedca6bba2e9e6b80f5d260ec195de52a736072d4c743579e435c363404e0561a05708c07fbb92e21d69aaff1273b9f724d25b3f59b26fe6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUCiVcACgkQVWmRsqeSphPPbQCeMgp0yYm3g2WYw5MHd1gsLGB+
-M9QAn3JS4+MfnqRyprgJV+h1JMLrhgup
-=Giff
+iQIcBAEBCAAGBQJVFS1uAAoJELp701BxlEWfYgQP/RtZ7ajWVQjlCsjUdsH8mwgF
+VpCdUKiees0Daf3SRAlqZLNVYaYVXw+30Yyv1+PdQg1gBqiBupOxvFif+5vujoyP
+RQ7QdtCyFQciVd27MzJnYmDnB5cAZ0KpgdMmTYYkLUBFphLsKEjWdton+7BpTTn/
+METPdaF39f1G2aCncj1YuV9pK6F85cIEVEO+u0lP+MNps+hFs9MgGfrjDO+ZxHvU
+CkjmVX8pekaOrLFWYZ3hOzcFBh2gtuISNhfdpnxaWBtQvYTb6dFhraqRfEdTzWT2
+uNdgwI/eWe6BZdRDUSpB+x+knkv0mRSLFkjNnmXYZyI35HPH9NSXkee43CIZzAoN
+f7DAne+VoeY4CCDautN76/zmOXrmjXK7b/FZF9/JDh2KoWYYZaJXSmu2L1nC/vzR
+3gu4R6ImX96NmSXyhccllNYTZJCwwPatGIZer00s5/J9d3zdgoJ3KNfEeyoRc62H
+enetwCX2ZzW9cB/zvX50pYGoIxP/6Bc5cFSdH2FPJdDcpg2wlRPlQHRBw7yxMwHe
+2VDKZXV516I6ggv1meJ9ZL97Owq4IJLpylwGnbEL3CVvqLOqIEMIPr6RZAAGJyIs
+qOPNG1DVvb84sAZF7sDHyAG3mqgpgFpCcA79Ww+Blsp8rojXn4yw6OH/dpf8IJFc
+dg5cu25RNNZ+t8MvyQVu
+=PKkq
 -----END PGP SIGNATURE-----
