@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/cucumber
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.93 2015/03/13 07:01:52 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.94 2015/03/27 10:14:10 ago Exp $
+
+  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cucumber-1.3.17.ebuild:
+  Stable for amd64, wrt bug #542574
 
   13 Mar 2015; Jeroen Roovers <jer@gentoo.org> cucumber-1.3.17.ebuild:
   Stable for HPPA (bug #542574).
