@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/aruba
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/aruba/ChangeLog,v 1.50 2015/03/13 06:53:10 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/aruba/ChangeLog,v 1.51 2015/03/27 10:14:04 ago Exp $
+
+  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> aruba-0.5.4-r1.ebuild:
+  Stable for amd64, wrt bug #542574
 
   13 Mar 2015; Jeroen Roovers <jer@gentoo.org> aruba-0.5.4-r1.ebuild:
   Stable for HPPA (bug #542574).
